benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_ModExpPow2_iter8_error.log
=== Verification Error - Iteration 8 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_ModExpPow2.rs
Time: 2025-09-15 20:44:28

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0283]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:30:15
   |
30 |     ensures (|result| (result as nat) == (a as nat) * (b as nat) % (m as nat))
   |               ^^^^^^   ------------- type must be known at this point
   |
   = note: cannot satisfy `_: std::marker::Copy`
note: required by a bound in `vstd::prelude::spec_cast_integer`
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:977:1
help: consider giving this closure parameter an explicit type
   |
30 |     ensures (|result: /* Type */| (result as nat) == (a as nat) * (b as nat) % (m as nat))
   |                     ++++++++++++

error[E0283]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:41:15
   |
41 |     ensures (|result| (result as nat) == Exp_int(base as nat, exp as nat) % (m as nat))
   |               ^^^^^^   ------------- type must be known at this point
   |
   = note: cannot satisfy `_: std::marker::Copy`
note: required by a bound in `vstd::prelude::spec_cast_integer`
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:977:1
help: consider giving this closure parameter an explicit type
   |
41 |     ensures (|result: /* Type */| (result as nat) == Exp_int(base as nat, exp as nat) % (m as nat))
   |                     ++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.

--------------------------------------------------------------------------------

Additional Output:
error[E0283]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:30:15
   |
30 |     ensures (|result| (result as nat) == (a as nat) * (b as nat) % (m as nat))
   |               ^^^^^^   ------------- type must be known at this point
   |
   = note: cannot satisfy `_: std::marker::Copy`
note: required by a bound in `vstd::prelude::spec_cast_integer`
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:977:1
help: consider giving this closure parameter an explicit type
   |
30 |     ensures (|result: /* Type */| (result as nat) == (a as nat) * (b as nat) % (m as nat))
   |                     ++++++++++++

error[E0283]: type annotations needed
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_ModExpPow2_impl.rs:41:15
   |
41 |     ensures (|result| (result as nat) == Exp_int(base as nat, exp as nat) % (m as nat))
   |               ^^^^^^   ------------- type must be known at this point
   |
   = note: cannot satisfy `_: std::marker::Copy`
note: required by a bound in `vstd::prelude::spec_cast_integer`
  --> /Users/runner/work/verus/verus/source/builtin/src/lib.rs:977:1
help: consider giving this closure parameter an explicit type
   |
41 |     ensures (|result: /* Type */| (result as nat) == Exp_int(base as nat, exp as nat) % (m as nat))
   |                     ++++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0283`.
